<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".team.presentation.TeamFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navigation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/team"
            android:textColor="?attr/textColorPrimary"
            android:textSize="@dimen/text_size_26" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_8"
            android:paddingHorizontal="@dimen/margin_16"
            android:fontFamily="@font/ys_display_bold"
            android:text="@string/team_work"
            android:textSize="@dimen/text_size_38"
            android:textColor="?attr/textColorPrimary"/>

    </FrameLayout>


    <TextView
        style="@style/YSMedium19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:text="@string/berezin" />

    <TextView
        style="@style/YSMedium19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:text="@string/golyudov" />

    <TextView
        style="@style/YSMedium19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:text="@string/morozov" />

    <TextView
        style="@style/YSMedium19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:text="@string/kolesnikov" />

</LinearLayout>
