<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/vacancyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_16"
        android:fontFamily="@font/ys_display_bold"
        android:text="@string/vacancy_name"
        android:textColor="@color/base_text"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/from"
        android:textColor="@color/base_text"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintTop_toBottomOf="@id/vacancyName" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEmployer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:cardCornerRadius="@dimen/margin_12"
        app:layout_constraintTop_toBottomOf="@id/salary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLogo"
                android:layout_width="@dimen/edit_text_height"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                app:cardCornerRadius="@dimen/margin_12"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/employerLogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary"
                    android:src="@drawable/ic_logo" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/employerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/employer_name"
                android:textColor="@color/base_text"
                android:textSize="@dimen/header_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardLogo"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/employerCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:fontFamily="@font/ys_display_regular"
                android:paddingBottom="@dimen/margin_16"
                android:text="@string/from"
                android:textColor="@color/base_text"
                android:textSize="@dimen/regular_text_size"
                app:layout_constraintStart_toEndOf="@id/cardLogo"
                app:layout_constraintTop_toBottomOf="@id/employerName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/requiredExperience"
        style="@style/SubHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/required_experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardEmployer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/experience"
        style="@style/ItemTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/requiredExperience" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="requiredExperience, experience" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employment"
        style="@style/ItemTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/experience"
        tools:text="@string/from" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/vacancyDescription"
        style="@style/ItemHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/vacancy_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employment" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        style="@style/ItemTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vacancyDescription"
        tools:text="@string/vacancy_description" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="vacancyDescription, description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/keySkills"
        style="@style/ItemHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/key_skills"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/keySkillsContent"
        style="@style/ItemTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keySkills"
        tools:text="@string/key_skills" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="keySkills, keySkillsContent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contacts"
        style="@style/ItemHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/contacts"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keySkillsContent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactFace"
        style="@style/SubHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/contact_name"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactName"
        style="@style/ItemTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/contactFace"
        tools:text="@string/contact_name" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="contactName, contactFace" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailName"
        style="@style/SubHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/e_mail"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/blue"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailName"
        tools:text="@string/e_mail" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="emailName, email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phoneName"
        style="@style/SubHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/phone"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/blue"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneName"
        tools:text="@string/phone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="phoneName, phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/commentName"
        style="@style/SubHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/comment"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/comment"
        style="@style/ItemTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/comment"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentName" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="commentName, comment" />

</androidx.constraintlayout.widget.ConstraintLayout>
