<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.PracticumAndroidDiploma"
    android:paddingHorizontal="@dimen/margin_16"
    tools:context=".favorite.presentation.FavoriteFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFavorites"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/favorite"
        android:background="@null"
        style="@style/Text_Header"
        android:textFontWeight="500"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        android:padding="@dimen/margin_8"/>

    <LinearLayout
        android:id="@+id/placeholder_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbarFavorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="223dp"
            android:src="@drawable/ic_dummy"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            style="@style/YSMedium22"
            android:textFontWeight="500"
            android:text="@string/list_empty"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbarFavorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="223dp"
            android:src="@drawable/image_error_favorite"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            style="@style/YSMedium22"
            android:textFontWeight="500"
            android:text="@string/no_list_vacancies"
            android:gravity="center"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarFavorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_view"
        tools:itemCount="10"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
